--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -5,5 +5,12 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
-  overflow-x: hidden;
+}
+
+main {
+  background: #f5f6f8;
+  min-height: 40vh;
+  padding: 90px 0 0 85px;
+  display: flex;
+  flex-direction: row;
 }
